--- a/index.html
+++ b/index.html
@@ -185,12 +185,16 @@
     .carousel-nav button{width:40px; height:40px; border-radius:50%; border:1px solid var(--stroke); background:rgba(255,255,255,0.9); color:var(--accent-2); font-size:18px; cursor:pointer; display:flex; align-items:center; justify-content:center; transition:all .2s ease}
     .carousel-nav button:hover{background:var(--accent); color:#fff; transform:scale(1.05)}
     .carousel-nav button:disabled{opacity:0.3; cursor:not-allowed}
+    .review-card{display:flex; flex-direction:column; gap:14px; height:100%}
+    .review-rating{margin-top:auto; padding-top:10px; color:var(--accent); font-size:18px}
 
     @media (max-width: 980px){
       .carousel-item{flex:0 0 calc(50% - 8px)}
     }
     @media (max-width: 640px){
       .carousel-item{flex:0 0 calc(100% - 0px)}
+      .review-card{height:auto}
+      .review-rating{margin-top:12px}
     }
 
     @media (prefers-reduced-motion: no-preference){
@@ -376,7 +380,7 @@
         <div class="carousel-container">
           <div class="carousel-wrapper" id="reviewsCarousel">
             <div class="carousel-item">
-              <div class="card" style="display:flex; flex-direction:column; gap:14px; height:100%">
+              <div class="card review-card">
                 <div style="display:flex; align-items:center; gap:12px">
                   <div style="width:48px; height:48px; border-radius:50%; background:linear-gradient(135deg, var(--accent-3), var(--accent)); display:grid; place-content:center; font-size:20px; font-weight:700; color:#fff">М</div>
                   <div>
@@ -385,13 +389,13 @@
                   </div>
                 </div>
                 <p style="color:var(--text); line-height:1.5; margin:0; font-size:14px">Работал на Taskrabbit больше года, но заказов было мало — 2-3 в неделю максимум. После подключения Taskboost за 3 недели вышел на первую страницу поиска. Сейчас расписание забито на неделю вперёд, ставка выросла с $45 до $95 в час. Окупилось за первую же неделю!</p>
-                <div style="margin-top:auto; padding-top:10px">
-                  <span style="color:var(--accent); font-size:18px">★★★★★</span>
+                <div class="review-rating">
+                  <span>★★★★★</span>
                 </div>
               </div>
             </div>
             <div class="carousel-item">
-              <div class="card" style="display:flex; flex-direction:column; gap:14px; height:100%">
+              <div class="card review-card">
                 <div style="display:flex; align-items:center; gap:12px">
                   <div style="width:48px; height:48px; border-radius:50%; background:linear-gradient(135deg, var(--accent-3), var(--accent)); display:grid; place-content:center; font-size:20px; font-weight:700; color:#fff">А</div>
                   <div>
@@ -400,13 +404,13 @@
                   </div>
                 </div>
                 <p style="color:var(--text); line-height:1.5; margin:0; font-size:14px">Скептически относилась к подобным сервисам, но решила попробовать. Результат превзошёл ожидания! За 2 месяца мой доход вырос с $4,000 до $12,000. Особенно впечатлила подписка «На спокойствие» — ребята сами общаются с поддержкой, решают все вопросы. Я просто работаю и получаю стабильный поток клиентов.</p>
-                <div style="margin-top:auto; padding-top:10px">
-                  <span style="color:var(--accent); font-size:18px">★★★★★</span>
+                <div class="review-rating">
+                  <span>★★★★★</span>
                 </div>
               </div>
             </div>
             <div class="carousel-item">
-              <div class="card" style="display:flex; flex-direction:column; gap:14px; height:100%">
+              <div class="card review-card">
                 <div style="display:flex; align-items:center; gap:12px">
                   <div style="width:48px; height:48px; border-radius:50%; background:linear-gradient(135deg, var(--accent-3), var(--accent)); display:grid; place-content:center; font-size:20px; font-weight:700; color:#fff">Д</div>
                   <div>
@@ -415,13 +419,13 @@
                   </div>
                 </div>
                 <p style="color:var(--text); line-height:1.5; margin:0; font-size:14px">После блокировки аккаунта думал, что всё — конец бизнесу. Taskboost помогли создать новый профиль и вывели его в ТОП за месяц. Сейчас зарабатываю даже больше, чем на старом аккаунте — около $15,000 в месяц. Безопасность их методов проверена временем, никаких проблем уже полгода.</p>
-                <div style="margin-top:auto; padding-top:10px">
-                  <span style="color:var(--accent); font-size:18px">★★★★★</span>
+                <div class="review-rating">
+                  <span>★★★★★</span>
                 </div>
               </div>
             </div>
             <div class="carousel-item">
-              <div class="card" style="display:flex; flex-direction:column; gap:14px; height:100%">
+              <div class="card review-card">
                 <div style="display:flex; align-items:center; gap:12px">
                   <div style="width:48px; height:48px; border-radius:50%; background:linear-gradient(135deg, var(--accent-3), var(--accent)); display:grid; place-content:center; font-size:20px; font-weight:700; color:#fff">Е</div>
                   <div>
@@ -430,13 +434,13 @@
                   </div>
                 </div>
                 <p style="color:var(--text); line-height:1.5; margin:0; font-size:14px">Только зарегистрировалась на Taskrabbit и не знала, с чего начать. В первый месяц без Taskboost было всего 3 заказа. Решила инвестировать в продвижение — и не пожалела. Сейчас у меня 50+ отзывов, стабильный поток заказов, ставка $75/час. Для новичков это просто спасение!</p>
-                <div style="margin-top:auto; padding-top:10px">
-                  <span style="color:var(--accent); font-size:18px">★★★★★</span>
+                <div class="review-rating">
+                  <span>★★★★★</span>
                 </div>
               </div>
             </div>
             <div class="carousel-item">
-              <div class="card" style="display:flex; flex-direction:column; gap:14px; height:100%">
+              <div class="card review-card">
                 <div style="display:flex; align-items:center; gap:12px">
                   <div style="width:48px; height:48px; border-radius:50%; background:linear-gradient(135deg, var(--accent-3), var(--accent)); display:grid; place-content:center; font-size:20px; font-weight:700; color:#fff">И</div>
                   <div>
@@ -445,13 +449,13 @@
                   </div>
                 </div>
                 <p style="color:var(--text); line-height:1.5; margin:0; font-size:14px">IKEA Assembly — закрытая категория, думал, что продвинуться невозможно. Taskboost доказали обратное. Вышли в топ-5 в моём зипкоде за месяц. Теперь делаю 4-5 заказов в день, доход перевалил за $18,000 в месяц. Еженедельные отчёты помогают отслеживать прогресс и понимать, что происходит. Профессионалы своего дела!</p>
-                <div style="margin-top:auto; padding-top:10px">
-                  <span style="color:var(--accent); font-size:18px">★★★★★</span>
+                <div class="review-rating">
+                  <span>★★★★★</span>
                 </div>
               </div>
             </div>
             <div class="carousel-item">
-              <div class="card" style="display:flex; flex-direction:column; gap:14px; height:100%">
+              <div class="card review-card">
                 <div style="display:flex; align-items:center; gap:12px">
                   <div style="width:48px; height:48px; border-radius:50%; background:linear-gradient(135deg, var(--accent-3), var(--accent)); display:grid; place-content:center; font-size:20px; font-weight:700; color:#fff">С</div>
                   <div>
@@ -460,8 +464,8 @@
                   </div>
                 </div>
                 <p style="color:var(--text); line-height:1.5; margin:0; font-size:14px">Конкуренция в Майами безумная, я застрял на второй странице поиска. После месяца работы с Taskboost — топ-3 в категории, ставка поднялась с $60 до $110. Самое главное — всё абсолютно безопасно, никаких подозрительных действий. Рекомендую всем, кто хочет зарабатывать серьёзно на Taskrabbit.</p>
-                <div style="margin-top:auto; padding-top:10px">
-                  <span style="color:var(--accent); font-size:18px">★★★★★</span>
+                <div class="review-rating">
+                  <span>★★★★★</span>
                 </div>
               </div>
             </div>
